--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ ul {
   padding: 24px 0 25px 0;
   display: block;
   position: relative;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
 
@@ -153,6 +153,11 @@ background: #2196F3;
 border-radius: 2px;
 position: absolute;
 margin-top: 22px;
+transition: 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
+
+.header-list_link_current{
+  color: var(--hover-color);
 }
 
 .header-list_link:hover,
@@ -214,6 +219,7 @@ margin-top: 22px;
   font-weight: 700;
   cursor: pointer;
   padding: 10px 20px;
+  transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover {
@@ -255,13 +261,25 @@ margin-top: 22px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+}
+
+.modal-close-button:hover,
+.modal-close-button:focus{
+  border-color: var(--hover-color);
+  color: var(--hover-color);
+
+  
 }
 
 .modal-close-icon{
   width:11px;
   height:11px;
-  fill: black;
+  fill: currentColor;
 }
+
+
+
 
 .is-hidden {
   opacity: 0;
@@ -292,7 +310,7 @@ margin-top: 22px;
   border-radius: 4px;
   display: flex;
   justify-content: center;
-  padding: 25px 100px;
+align-items: center; 
   margin-bottom: 30px;
 }
 
@@ -347,21 +365,20 @@ margin-top: 22px;
   position:relative
 }
 
-.photo-description{
-background-color: rgba(47, 48, 58, 0.8);
-position: absolute;
-bottom: 0;
-width: 370px;
-height: 70px;
-text-align: center;
-padding: 27px;
-}
+
 
 .photo-description-paragraph{
   color: var(--text-color-white);
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
+  background-color: rgba(47, 48, 58, 0.8);
+position: absolute;
+bottom: 0;
+width: 370px;
+height: 70px;
+text-align: center;
+padding: 27px;
   
 }
 
@@ -384,15 +401,16 @@ padding: 27px;
   width: 44px;
   height: 44px;
   display: flex;
-  padding: 12px;
+  justify-content: center;
+  align-items: center;
   transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border-radius: 50%;
 }
 
 .team-list-link:hover,
 .team-list-link:focus {
   color: var(--text-color-white);
   background-color: #2196f3;
-  border-radius: 50%;
 }
 
 .team-title {
@@ -524,8 +542,6 @@ padding: 27px;
 .icon-footer-list {
   display: flex;
   justify-content: center;
-  padding-right: 44px;
-  padding-bottom: 42px;
 }
 
 .icon-footer-link {
@@ -579,6 +595,7 @@ padding: 27px;
   color: rgba(255, 255, 255, 0.6);
   line-height: 24px;
   text-decoration: none;
+  transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-contact:hover,
@@ -647,6 +664,7 @@ padding: 27px;
 
 .picture-link {
   text-decoration: none;
+  cursor: pointer;
 }
 
 .picture-item {
@@ -666,6 +684,8 @@ overflow: hidden;
 color: var(--text-color-white);
 padding-top: 64px;
 padding-left: 24px;
+padding-right: 24px;
+padding-bottom: 64px;
 width: 320px;
 font-size: 18px;
 line-height: 28px;
