--- a/css/style.css
+++ b/css/style.css
@@ -248,6 +248,7 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1)
   top: 50%;
   position: absolute;
   width: 528px;
+  border-radius: 4px;
   
 }
 
@@ -260,7 +261,7 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1)
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
   cursor: pointer;
 }
 
